unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/breadwinner_ns__BW_Payment__c.object-meta.xml
<CustomObject>
    <label>NetSuite Payment</label>
    <nameField>
        <label>Payment #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>