unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/fields/breadwinner_ns__EntityName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__EntityName__c</fullName>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>