unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/fields/breadwinner_ns__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ExchangeRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>