unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/fields/breadwinner_ns__Flag__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Flag__c</fullName>
    <formula>IF(breadwinner_ns__NS_Object_Type__c !=&#39;VendorPayment&#39;,
            IF(CONTAINS($User.UIThemeDisplayed,&#39;Theme4&#39;),
IF(CONTAINS(breadwinner_ns__Payment_Status__c, &#39;Fully&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/Flags/green-flag.png&#39;,&#39;Fully Applied&#39;),IF(breadwinner_ns__Payment_Status__c=&#39;Unapproved Payment&#39;,IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/pencil.png&#39;, &#39;Unapproved Payment&#39;),
IF(breadwinner_ns__Payment_Status__c=&#39;Deleted&#39;,IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/x-ltng.png&#39;, &#39;Deleted&#39;),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/Flags/yellow-flag.png&#39;, &#39;Open/Approved&#39;)))),
IF(CONTAINS(breadwinner_ns__Payment_Status__c, &#39;Fully&#39;),IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Fully Applied&quot;,16,16),IF(breadwinner_ns__Payment_Status__c=&#39;Unapproved Payment&#39;,IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/pencil.png&#39;,&#39;Unapproved Payment&#39;,16,16),IF(breadwinner_ns__Payment_Status__c=&#39;Deleted&#39;,IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/x-cls.png&#39;, &#39;Deleted&#39;,16,16),IMAGE(&#39;/resource/breadwinner_ns__Breadwinner_for_NetSuite/Breadwinner/Images/Flags/yellow-flag.png&#39;, &#39;Open/Approved&#39;,16,16))))),&#39;&#39;)</formula>
    <label>Flag</label>
    <type>Text</type>
</CustomField>