unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/fields/breadwinner_ns__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Payment_Status__c</fullName>
    <formula>IF( breadwinner_ns__NS_Object_Type__c == &#39;CustomerDeposit&#39;,
breadwinner_ns__Status__c,
(IF(breadwinner_ns__Status__c =&#39;Deposited&#39;,IF(breadwinner_ns__Unapplied__c=0,&#39;Deposited (Fully Applied)&#39;,IF(breadwinner_ns__Unapplied__c&gt;0,&#39;Deposited (Open)&#39;,&#39;Deposited (Approved)&#39;)),
IF(breadwinner_ns__Status__c =&#39;Not Deposited&#39;,IF(breadwinner_ns__Unapplied__c=0,&#39;Not Deposited (Fully Applied)&#39;,IF(breadwinner_ns__Unapplied__c&gt;0,&#39;Not Deposited (Open)&#39;,&#39;Not Deposited (Approved)&#39;)),breadwinner_ns__Status__c)))
)</formula>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>