unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/fields/breadwinner_ns__Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary</label>
    <referenceTo>breadwinner_ns__BW_Subsidiary__c</referenceTo>
    <relationshipLabel>NetSuite Payments</relationshipLabel>
    <relationshipName>BWPayments</relationshipName>
    <type>Lookup</type>
</CustomField>