unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Flag__c</columns>
    <columns>breadwinner_ns__Payment_Status__c</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__Customer__c</columns>
    <columns>breadwinner_ns__Salesforce_Account__c</columns>
    <columns>breadwinner_ns__Payment__c</columns>
    <columns>breadwinner_ns__Applied__c</columns>
    <columns>breadwinner_ns__Unapplied__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>