unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/listViews/breadwinner_ns__NetSuite_Customer_Deposits.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Customer_Deposits</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Status__c</columns>
    <columns>breadwinner_ns__Payment__c</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__Customer__c</columns>
    <columns>breadwinner_ns__AccountName__c</columns>
    <columns>breadwinner_ns__Subsidiary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>CustomerDeposit</value>
    </filters>
    <label>NetSuite Customer Deposits</label>
</ListView>