unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/listViews/breadwinner_ns__NetSuite_Customer_Payments.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Customer_Payments</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__Customer__c</columns>
    <columns>breadwinner_ns__Salesforce_Account__c</columns>
    <columns>breadwinner_ns__Payment__c</columns>
    <columns>breadwinner_ns__Applied__c</columns>
    <columns>breadwinner_ns__Unapplied__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>notEqual</operation>
        <value>VendorPayment</value>
    </filters>
    <label>NetSuite Customer Payments</label>
</ListView>