unpackaged/main/default/objects/breadwinner_ns__BW_Payment__c/listViews/breadwinner_ns__NetSuite_Vendor_Payments.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Vendor_Payments</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__TranDate__c</columns>
    <columns>breadwinner_ns__Entity_Vendor__c</columns>
    <columns>breadwinner_ns__Entity_Employee__c</columns>
    <columns>breadwinner_ns__Salesforce_Account__c</columns>
    <columns>breadwinner_ns__Total__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>VendorPayment</value>
    </filters>
    <label>NetSuite Vendor Payments</label>
</ListView>